Configure for production deployment: env vars, CORS, Vercel+Render support